--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,11 @@
+:root {
+  --gradient: linear-gradient(to left top, #DD2476 10%, #FF512F 90%) !important;
+}
+
 body {
   font-family: 'Rubik', sans-serif;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Rubik Mono One', sans-serif;
-}
 
 .small {
   font-weight: 300;
@@ -51,21 +47,26 @@ body {
   color: rgba(250, 250, 250, 0.8);
 }
 
-
-.single-deal-card .btn {
+.view-game-btn{
   border: 5px solid;
   border-image-slice: 1;
   background: var(--gradient) !important;
   -webkit-text-fill-color: transparent !important;
+  -webkit-background-clip: text !important;
   border-image-source:  var(--gradient) !important; 
   text-decoration: none;
   transition: all .4s ease;
 }
 
-.single-deal-card .btn:hover, .btn:focus {
+.view-game-btn:hover, .view-game-btn:focus {
   background: var(--gradient) !important;
   -webkit-text-fill-color: #fff !important;
   border: 5px solid #fff !important; 
   box-shadow: #222 1px 0 10px;
   text-decoration: underline;
+}
+
+.fa-lg {
+  padding-left: 8px;
+  padding-right: 8px;
 }
