add search bar to navigation

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,9 +22,9 @@ body {
 }
 
 .navbar-brand{
-  color: #dd2476 !important;
   font-weight: bolder;
-  font-size: 30px;
+  font-size: 40px;
+  margin-right: 200px;
 }
 
 .single-deal-card {
@@ -73,4 +73,39 @@ body {
 .fa-lg {
   padding-left: 8px;
   padding-right: 8px;
+}
+
+.cool-gradient{
+  color: #dd2476 !important;
+  background: var(--gradient) !important;
+  -webkit-text-fill-color: transparent !important;
+  -webkit-background-clip: text !important;
+}
+
+.game-search-form{
+  background-color: black !important;
+}
+
+.game-search-form div{
+  background-color: black !important;
+}
+
+.game-search-form div input{
+  background-color: black !important;
+}
+
+.form-control::placeholder {
+  color: #dd2476 !important;
+  background: var(--gradient) !important;
+  -webkit-text-fill-color: transparent !important;
+  -webkit-background-clip: text !important;
+  font-weight: bolder;
+}
+
+.navbar-nav a{
+  font-size: 20px;
+}
+
+.navbar-toggler-icon.icon-bar{
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")!important;
 }
