--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,35 @@ body {
   margin-right: 200px;
 }
 
+.game-search-form{
+  background-color: black !important;
+}
+
+.game-search-form div{
+  background-color: black !important;
+}
+
+.game-search-form div input{
+  background-color: black !important;
+}
+
+.form-control::placeholder {
+  color: #dd2476 !important;
+  background: var(--gradient) !important;
+  -webkit-text-fill-color: transparent !important;
+  -webkit-background-clip: text !important;
+  font-weight: bolder;
+  font-size: 20px;
+}
+
+.navbar-nav a{
+  font-size: 20px;
+}
+
+.navbar-toggler-icon.icon-bar{
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")!important;
+}
+
 .single-deal-card {
   background: #222;
   border: 1px solid #dd2476;
@@ -82,30 +111,35 @@ body {
   -webkit-background-clip: text !important;
 }
 
-.game-search-form{
-  background-color: black !important;
-}
-
-.game-search-form div{
-  background-color: black !important;
-}
-
-.game-search-form div input{
-  background-color: black !important;
-}
-
-.form-control::placeholder {
-  color: #dd2476 !important;
+.cool-btn{
+  border: 5px solid;
+  border-image-slice: 1;
   background: var(--gradient) !important;
   -webkit-text-fill-color: transparent !important;
   -webkit-background-clip: text !important;
-  font-weight: bolder;
+  border-image-source:  var(--gradient) !important; 
+  text-decoration: none;
+  transition: all .4s ease;
 }
 
-.navbar-nav a{
+.btn-primary{
+  background: var(--gradient) !important;
+  -webkit-text-fill-color: transparent !important;
+  -webkit-background-clip: text !important;
   font-size: 20px;
+  border: 1px solid var(--gradient) !important;
+  font-weight: bold;
 }
 
-.navbar-toggler-icon.icon-bar{
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")!important;
+.dropdown-menu{
+  background: var(--gradient) !important;
+  border: solid 3px black rounded;
+}
+
+.dropdown-item{
+  color:rgba(250, 250, 250, 0.8);
+  text-align: center;
+}
+.cool-white{
+  color: rgba(250, 250, 250, 0.8);
 }
