--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,15 +28,16 @@ body {
 }
 
 .game-search-form{
-  background-color: black !important;
+  background-color: #222 !important;
+  border: rounded;
 }
 
 .game-search-form div{
-  background-color: black !important;
+  background-color: #222 !important;
 }
 
 .game-search-form div input{
-  background-color: black !important;
+  background-color: #222 !important;
 }
 
 .form-control::placeholder {
