--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,11 @@
   --gradient: linear-gradient(to left top, #DD2476 10%, #FF512F 90%) !important;
 }
 
+html, body, #root, .App {
+  width: 100% !important;
+
+}
+
 body {
   font-family: 'Rubik', sans-serif;
 }
@@ -162,6 +167,7 @@ body {
 .display1-content-container{
   overflow: hidden;
   position: relative;
+  border-radius: 10px;
 }
 
 .display1-bg-img{
