--- a/client/src/index.css
+++ b/client/src/index.css
@@ -241,3 +241,24 @@ body {
    background: #222;
  }
 
+ footer{
+   height: 110px;
+   margin-top: 100px;
+   margin-bottom: 0px;
+   border: solid 2px #dd2476 !important;
+ }
+
+ .github-img{
+   height: 75px;
+   width: 75px;
+ }
+
+ .footer-logo{
+   height: 75px;
+   width: 175px;
+ }
+
+ .linkedin-logo{
+   height: 40px;
+   width: 175px;
+ }
