keeping footer at bottom

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -263,3 +263,17 @@ body {
    height: 40px;
    width: 175px;
  }
+
+ footer {
+   position: absolute;
+   bottom: 0;
+   width: 100%
+ }
+
+ #root{
+   min-height: 100vh;
+   overflow: hidden;
+   display: block;
+   position: relative;
+   padding-bottom: 120px;
+ }
