--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,13 @@ body {
   font-size: 40px;
   margin-right: 200px;
 }
+.single-game-view-btn{
+  font-size: 25px;
+}
+.navbar-toggler{
+  margin-top: 5px;
+   background-color: rgba(250, 250, 250, 0.8);
+ }
 
 .game-search-form{
   background-color: #222 !important;
@@ -50,7 +57,7 @@ body {
 }
 
 .navbar-nav a{
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .navbar-toggler-icon.icon-bar{
@@ -86,6 +93,7 @@ body {
   border-image-source:  var(--gradient) !important; 
   text-decoration: none;
   transition: all .4s ease;
+  font-size: 20px;
 }
 
 .view-game-btn:hover, .view-game-btn:focus {
@@ -140,6 +148,10 @@ body {
 .dropdown-item{
   color:rgba(250, 250, 250, 0.8);
   text-align: center;
+}
+
+.dropdown-toggle{
+  font-size: 25px;
 }
 .cool-white{
   color: rgba(250, 250, 250, 0.8);
@@ -256,12 +268,12 @@ body {
 
  .footer-logo{
    height: 75px;
-   width: 175px;
+   width: 150px;
  }
 
  .linkedin-logo{
-   height: 40px;
-   width: 175px;
+  height: 75px;
+  width: 75px;
  }
 
  footer {
